--- a/development/scss/style.scss
+++ b/development/scss/style.scss
@@ -37,6 +37,10 @@ body {
 	color: $color6;
 }
 
+.edge-container {
+	background: $color1;
+}
+
 .light-container {
 	background: $color3-trans;
 }
@@ -118,7 +122,7 @@ footer {
 
 .panel-home > .product {
 	color: $color3;
-	background-color: $color2;
+	background-color: $color5;
 }
 
 .panel-default {
@@ -223,6 +227,10 @@ blockquote {
 	color: $color3;
 }
 
+.divider {
+	border-bottom: 2px solid $color4;
+}
+
 /* typography */
 
 body, .product h2 {
@@ -295,11 +303,12 @@ h6 {
 }
 
 
-.panel-home > .product {
+.panel-home > .product h2 {
 	text-align: center;
 	font-weight: 700;
 	letter-spacing: 2.2px;
-	font-size: 3em;
+	font-size: 2em;
+	margin-top:10px;
 
 }
 
@@ -332,17 +341,21 @@ blockquote {
 	margin-bottom: 35px;
 }
 
-.table-compare {
+.table-compare th, .table-compare tbody{
 	text-align: center;
 }
 
-.table-compare tbody tr td:first-of-type {
+.table-compare tr td:first-of-type,   .table-compare tr th:first-of-type{
 	font-weight: 600;
 	text-align: left;
 }
 
 .table-compare tbody tr .indent {
 	padding-left: 45px;
+}
+
+.bottom {
+	padding-top: 35px;
 }
 
 /************************/
@@ -380,6 +393,10 @@ ol li {
 
 .dropdown-menu li {
 	margin: 6px 0;
+}
+
+.divider {
+	list-style: none;
 }
 
 /* images */
@@ -518,13 +535,21 @@ nav li {
 }
 
 
-.photo-bg {
-	-webkit-background-size: 100%;
-	background-size: 100%;
-	background-attachment: fixed;
-	padding-bottom: 75px;
+.photo-bg-home, .photo-bg {
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
+.photo-bg-home {
+	background-attachment: scroll;
+	background-position: top;
+	padding-bottom: 15%;
+}
+
+.photo-bg {
+	background-attachment: fixed;
+}
 
 .panel-home > .product {
 	padding: 5px;
@@ -559,6 +584,18 @@ section {
 
 blockquote {
 	margin-top: 25px;
+}
+
+.dropdown:hover .dropdown-menu {
+	display: block;
+}
+
+footer {
+	margin: 25px 0 10px;
+}
+
+.navbar-header {
+	display: inline;
 }
 
 @media (max-width: 1065px) {
