--- a/development/scss/style.scss
+++ b/development/scss/style.scss
@@ -37,6 +37,10 @@ body {
 	color: $color6;
 }
 
+.dark-edge-container {
+	background: $edgecolor2;
+}
+
 .edge-container {
 	background: $color1;
 }
@@ -548,6 +552,7 @@ nav li {
 }
 
 .photo-bg {
+	padding-top: 15px;
 	background-attachment: fixed;
 }
 
@@ -615,6 +620,14 @@ footer {
 	color: $color1;
 	margin: 0;
 	border-top: 2px solid $color1;
+}
+
+.edge-container .edge-title {
+	color: $color3;
+}
+
+.dark-edge-container {
+	padding-top: 15px;
 }
 
 @media (max-width: 1065px) {
