--- a/development/scss/style.scss
+++ b/development/scss/style.scss
@@ -661,6 +661,16 @@ footer {
 	margin-top: 1.5em;
 }
 
+.picture-text {
+	margin-top: 25px;
+}
+
+.field-bg {
+	background-color: #349930;
+
+	background-image: url('../img/field_texture.png');
+}
+
 @media (max-width: 1065px) {
 	
 }
