Added paypal buttons to accessories

--- a/development/scss/style.scss
+++ b/development/scss/style.scss
@@ -431,6 +431,10 @@ iframe {
 	margin-bottom: 15px;
 }
 
+form .btn {
+	margin-bottom: 0;
+}
+
 .btn, .btn-primary {
 	border-radius: 0px;
 	border: none;
