--- a/development/scss/style.scss
+++ b/development/scss/style.scss
@@ -346,6 +346,14 @@ p {
 	text-align: center;
 }
 
+.contact h2 {
+	color: $color1;
+}
+
+.contact h4 {
+	font-size: 1.6em;
+	line-height: 1.5em;
+}
 
 .panel-home > .product h2 {
 	text-align: center;
